--- a/html/css/form3.css
+++ b/html/css/form3.css
@@ -1,28 +1,29 @@
 *{
     margin:0;
     padding: 0;
-}.container{
+}
+.container{
     background-color: rgb(182, 214, 208);
-width: 100vw;
-height: 100vh;
+    width: 100vw;
+    height: 100vh;
 }
 .main{
     background-color: white;
-    width: 700px;
-    height: 500px;
+    width: 800px;
+    height: 520px;
     position: relative;
-    left: 40%;
+    left: 30%;
     top: 45px;
 }
 .titleSurvey{
    position: relative;
    top: 10px;
-   left:50%;
+   left:48%;
     width: 300px;
 }
 .context{
     position: relative;
-    left: 200px;
+    left: 300px;
     top: 50px;
     width:500px ;
 }
@@ -31,41 +32,92 @@ height: 100vh;
     flex-direction: column;
     width: 50%;
     position: relative;
-    right: 35px;
+    right: 16px;
     top: 3px;
 }
 .freeCodeCamp{
     display: flex;
+    position: relative;
+    right: 245px;
+    margin: 14px;
 }
 .frecodecampSpan{
     position: relative;
     left: 100px;
-
 }
 
  .letUsText{
     position: relative;
-    right: 25px;
-    
+    right: 85px; 
 }
 .namendEmail{
   margin: 25px auto;
 }
-#name{
-    height: 20px;
-}
+
 .agelabelinput{
     position: relative;
     left: 10px;
 }
 .agelabelinput input{
-    width: 272px;
-    height: 20px;
+    width: 260px;
+    
 }
 
-.age{
-    height: 20px;
+.nameClass, .emailLabelandinp,.agelabelinput{
+    margin: 20px auto;
 }
-.email{
-    height: 20px;
+
+.input{
+    height: 25px;
+    border: 1px solid gray;
+    color: gray;
+    position: relative;
+    left: 10px;
+}
+
+.selectdecribes { 
+    position: relative;
+    right: 245px;
+   
+   
+}
+.selected{
+    width: 120px;
+    height: 30px;
+    background-color: #eae8e8;
+    position: relative;
+    left: 15px;
+
+}
+
+.FCCClass{
+    display:flex;
+    position: relative;
+    right:170px;
+    top: 12px;
+}
+.fccSelect{
+    position: relative;
+    left: 22px;
+    width: 120px;
+    height: 30px;
+    background-color: #eae8e8;
+}
+.FrontorBackend{
+    display: flex;
+    position: relative;
+    right: 245px;
+    top: 30px;
+}
+.check{
+    position: relative;
+    left: 143px;
+}
+.checkbox{
+    width: 200px;
+    position: relative;
+    left: 20px;
+}
+.checkParagraph{
+    width: 287px;
 }
