--- a/html/css/website1.css
+++ b/html/css/website1.css
@@ -6,7 +6,7 @@
 .section{
     background-image: url(../images/6166a4819909b7198888e883_pexels-daria-liudnaya.webp);
     width: 100vw;
-   
+   background:cover;
     background-repeat: no-repeat;
     position: absolute;
 }
@@ -79,7 +79,7 @@
     margin: 300px 600px;
     display: flex;
     justify-content: center;
-    width: 450px;
+ 
     align-items: center;
     position: relative;
     top: 30px;
