--- a/html/css/website2.css
+++ b/html/css/website2.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #fff;
+    color: black;
     position: relative;
     top: 30px;
   }
@@ -41,7 +41,7 @@
   
   .navbar-links li a {
     text-decoration: none;
-    color: white;
+    color: black;
     padding: 1rem;
     display: block;
   }
@@ -66,6 +66,7 @@
   .titleandparagraph{
     position: relative;
     top: 50%;
+    left: 35px;
   }
   .titleHolidays{
     color: white;
@@ -76,6 +77,17 @@
 
 .paragraph{
   width: 500px;
+  color: white;
+}
+
+.listbutton{
+  width: 150px;
+  height: 25px;
+  background-color: #2a4469;
+  border: none;
+  border-radius: 5px;
+  position: relative;
+  top: 15px;
   color: white;
 }
   @media (max-width: 400px) {
