--- a/html/css/website2.css
+++ b/html/css/website2.css
@@ -7,6 +7,7 @@
   background:url(../images/forest-nature-cabin.jpeg) no-repeat;
     width: 100vw;
     height: 100vh;
+    background-size: cover;
  } 
   
   
